# IROSA

./: .gitignore  CITATION.bib  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data/: demonstrations.npz
examples/: __init__.py  experiment_obstacle.py  experiment_speed.py  experiment_viapoint.py
irosa/: __init__.py  exceptions.py  main.py  plotting.py
irosa/core/: __init__.py  llm_client.py  tool.py  trajectory_corrector.py
irosa/models/: __init__.py  kmp.py  kmp_core.py
irosa/robots/: __init__.py  robot.py  sim.py
irosa/tool_definitions/: __init__.py  general.py  kmp.py  robot.py
tests/: __init__.py  conftest.py  test_import.py  test_kmp.py  test_tool.py  test_tool_definitions.py  test_trajectory_corrector.py
